--- a/src/main/resources/assets/basemetals/lang/en_AU.lang
+++ b/src/main/resources/assets/basemetals/lang/en_AU.lang
@@ -153,6 +153,7 @@ item.basemetals.iron_crackhammer.name=Iron Crack Hammer
 item.basemetals.iron_powder.name=Powdered Iron
 item.basemetals.iron_nugget.name=Iron Nugget
 item.basemetals.gold_powder.name=Powdered Gold
+item.basemetals.gold_crackhammer.name=Golden Crack Hammer
 item.basemetals.lead_axe.name=Lead Axe
 item.basemetals.lead_bars.name=Lead Bars
 item.basemetals.lead_block.name=Lead Block
