--- a/src/main/resources/assets/basemetals/lang/fr_CA.lang
+++ b/src/main/resources/assets/basemetals/lang/fr_CA.lang
@@ -153,6 +153,7 @@ item.basemetals.iron_crackhammer.name=Massette en fer
 item.basemetals.iron_powder.name=Fer en poudre
 item.basemetals.iron_nugget.name=Pépite de fer
 item.basemetals.gold_powder.name=Or en poudre
+item.basemetals.gold_crackhammer.name=Massette en or
 item.basemetals.lead_axe.name=Hache en plomb
 item.basemetals.lead_bars.name=Barres de plomb
 item.basemetals.lead_block.name=Bloc de plomb
