--- a/src/main/resources/assets/basemetals/lang/fr_FR.lang
+++ b/src/main/resources/assets/basemetals/lang/fr_FR.lang
@@ -529,3 +529,5 @@ item.basemetals.starsteel_gear.name=Pignon en acier-étoile
 item.basemetals.steel_gear.name=Pignon en acier
 item.basemetals.tin_gear.name=Pignon en étain
 item.basemetals.zinc_gear.name=Pignon de zinc
+
+item.basemetals.gold_crackhammer.name=Massette en or
