--- a/src/main/resources/assets/basemetals/lang/it_IT.lang
+++ b/src/main/resources/assets/basemetals/lang/it_IT.lang
@@ -136,6 +136,7 @@ item.basemetals.iron_crackhammer.name=Ferro Mazza
 item.basemetals.iron_nugget.name=Ferro Sassolino
 item.basemetals.iron_powder.name=Polvere Ferro
 item.basemetals.gold_powder.name=Polvere Oro
+item.basemetals.gold_crackhammer.name=Lega di Rame Oro
 item.basemetals.lead_axe.name=Piombo Ascia
 item.basemetals.lead_bars.name=Piombo Barra
 item.basemetals.lead_block.name=Piombo Cubo
