--- a/src/main/resources/assets/basemetals/lang/nl_NL.lang
+++ b/src/main/resources/assets/basemetals/lang/nl_NL.lang
@@ -153,6 +153,7 @@ item.basemetals.iron_crackhammer.name=IJzeren Breek Hamer
 item.basemetals.iron_powder.name=Verpulverd IJzer
 item.basemetals.iron_nugget.name=IJzer Klompje
 item.basemetals.gold_powder.name=Verpulverd Goud
+item.basemetals.gold_crackhammer.name=Goud Breek Hamer
 item.basemetals.lead_axe.name=Loden Bijl
 item.basemetals.lead_bars.name=Loden Tralies
 item.basemetals.lead_block.name=Loden Blok
