--- a/src/main/resources/assets/basemetals/lang/pt_BR.lang
+++ b/src/main/resources/assets/basemetals/lang/pt_BR.lang
@@ -136,6 +136,7 @@ item.basemetals.iron_crackhammer.name=Marreta de Ferro
 item.basemetals.iron_nugget.name=Pepita de Ferro
 item.basemetals.iron_powder.name=Ferro Pulverizado
 item.basemetals.gold_powder.name=Ouro Pulverizado
+item.basemetals.gold_crackhammer.name=Marreta de Ouro
 item.basemetals.lead_axe.name=Machado de Chumbo
 item.basemetals.lead_bars.name=Barras de Chumbo
 item.basemetals.lead_block.name=Cubo de Chumbo
