--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -136,6 +136,7 @@ item.basemetals.iron_crackhammer.name=铁破裂锤
 item.basemetals.iron_nugget.name=铁粒
 item.basemetals.iron_powder.name=铁粉
 item.basemetals.gold_powder.name=金粉
+item.basemetals.gold_crackhammer.name=金破裂锤
 item.basemetals.lead_axe.name=铅斧
 item.basemetals.lead_bars.name=铅栏杆
 item.basemetals.lead_block.name=铅块
