--- a/src/main/resources/assets/basemetals/lang/zh_TW.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_TW.lang
@@ -153,6 +153,7 @@ item.basemetals.iron_crackhammer.name=鐵破裂錘
 item.basemetals.iron_powder.name=鐵粉
 item.basemetals.iron_nugget.name=鐵粒
 item.basemetals.gold_powder.name=金粉
+item.basemetals.gold_crackhammer.name=金破裂锤
 item.basemetals.lead_axe.name=鉛斧
 item.basemetals.lead_bars.name=鉛欄杆
 item.basemetals.lead_block.name=鉛磚
