--- a/src/main/resources/assets/basemetals/lang/en_EN.lang
+++ b/src/main/resources/assets/basemetals/lang/en_EN.lang
@@ -528,3 +528,5 @@ item.basemetals.starsteel_gear.name=Star-Steel Gear
 item.basemetals.steel_gear.name=Steel Gear
 item.basemetals.tin_gear.name=Tin Gear
 item.basemetals.zinc_gear.name=Zinc Gear
+
+item.basemetals.gold_crackhammer.name=Golden Crack Hammer
