--- a/src/main/resources/assets/basemetals/lang/es_MX.lang
+++ b/src/main/resources/assets/basemetals/lang/es_MX.lang
@@ -136,6 +136,7 @@ item.basemetals.iron_crackhammer.name=Almádena de hierro
 item.basemetals.iron_nugget.name=Pepita de hierro
 item.basemetals.iron_powder.name=Polvo de hierro
 item.basemetals.gold_powder.name=Polvo de oro
+item.basemetals.gold_crackhammer.name=Almádena de oro
 item.basemetals.lead_axe.name=Hacha de plomo
 item.basemetals.lead_bars.name=Barrotes de plomo
 item.basemetals.lead_block.name=Bloque de plomo
