--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -493,8 +493,8 @@ tile.basemetals.platinum_door.name=铂门
 tile.basemetals.platinum_ore.name=铂矿石
 tile.basemetals.platinum_trapdoor.name=铂地板门
 
-item.basemetals.adamantine_rod.name=精金棒
-item.basemetals.aquarium_rod.name=精金棒
+item.basemetals.adamantine_rod.name=艾德曼金属棒
+item.basemetals.aquarium_rod.name=海洋合金棒
 item.basemetals.brass_rod.name=黄铜棒
 item.basemetals.bronze_rod.name=青铜棒
 item.basemetals.coldiron_rod.name=寒铁棒
@@ -502,7 +502,7 @@ item.basemetals.copper_rod.name=铜棒
 item.basemetals.cupronickel_rod.name=白铜棒
 item.basemetals.electrum_rod.name=琥珀金棒
 item.basemetals.gold_rod.name=金棒
-item.basemetals.invar_rod.name=殷钢棒
+item.basemetals.invar_rod.name=因瓦合金棒
 item.basemetals.iron_rod.name=铁棒
 item.basemetals.lead_rod.name=铅棒
 item.basemetals.mithril_rod.name=秘银棒
@@ -514,8 +514,8 @@ item.basemetals.steel_rod.name=钢棒
 item.basemetals.tin_rod.name=锡棒
 item.basemetals.zinc_rod.name=锌棒
 
-item.basemetals.adamantine_gear.name=精金齿轮
-item.basemetals.aquarium_gear.name=精金齿轮
+item.basemetals.adamantine_gear.name=艾德曼金属齿轮
+item.basemetals.aquarium_gear.name=海洋合金齿轮
 item.basemetals.brass_gear.name=黄铜齿轮
 item.basemetals.bronze_gear.name=青铜齿轮
 item.basemetals.coldiron_gear.name=寒铁齿轮
@@ -523,7 +523,7 @@ item.basemetals.copper_gear.name=铜齿轮
 item.basemetals.cupronickel_gear.name=白铜齿轮
 item.basemetals.electrum_gear.name=琥珀金齿轮
 item.basemetals.gold_gear.name=金齿轮
-item.basemetals.invar_gear.name=殷钢齿轮
+item.basemetals.invar_gear.name=因瓦合金齿轮
 item.basemetals.iron_gear.name=铁齿轮
 item.basemetals.lead_gear.name=铅齿轮
 item.basemetals.mithril_gear.name=秘银齿轮
