--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -449,7 +449,7 @@ achievement.cupronickel_maker.desc=混合铜粉和镍粉，并烧制白铜
 item.basemetals.cupronickel_axe.name=白铜斧
 item.basemetals.cupronickel_bars.name=白铜栏杆
 item.basemetals.cupronickel_blend.name=白铜粉
-item.basemetals.cupronickel_block.name=白铜砖
+item.basemetals.cupronickel_block.name=白铜块
 item.basemetals.cupronickel_boots.name=白铜靴子
 item.basemetals.cupronickel_chestplate.name=白铜胸甲
 item.basemetals.cupronickel_crackhammer.name=白铜破裂锤
@@ -463,15 +463,15 @@ item.basemetals.cupronickel_pickaxe.name=白铜镐
 item.basemetals.cupronickel_powder.name=白铜粉
 item.basemetals.cupronickel_shovel.name=白铜铲
 item.basemetals.cupronickel_sword.name=白铜剑
-item.basemetals.cupronickel_trapdoor.name=白铜地板门
+item.basemetals.cupronickel_trapdoor.name=白铜活板门
 tile.basemetals.cupronickel_bars.name=白铜栏杆
-tile.basemetals.cupronickel_block.name=白铜砖
+tile.basemetals.cupronickel_block.name=白铜块
 tile.basemetals.cupronickel_door.name=白铜门
-tile.basemetals.cupronickel_trapdoor.name=白铜地板门
+tile.basemetals.cupronickel_trapdoor.name=白铜活板门
 
 item.basemetals.platinum_axe.name=铂斧
 item.basemetals.platinum_bars.name=铂栏杆
-item.basemetals.platinum_block.name=铂砖
+item.basemetals.platinum_block.name=铂块
 item.basemetals.platinum_boots.name=铂靴子
 item.basemetals.platinum_chestplate.name=铂胸甲
 item.basemetals.platinum_crackhammer.name=铂破裂锤
@@ -486,12 +486,12 @@ item.basemetals.platinum_pickaxe.name=铂镐
 item.basemetals.platinum_powder.name=铂粉
 item.basemetals.platinum_shovel.name=铂铲
 item.basemetals.platinum_sword.name=铂剑
-item.basemetals.platinum_trapdoor.name=铂地板门
+item.basemetals.platinum_trapdoor.name=铂活板门
 tile.basemetals.platinum_bars.name=铂栏杆
-tile.basemetals.platinum_block.name=铂砖
+tile.basemetals.platinum_block.name=铂块
 tile.basemetals.platinum_door.name=铂门
 tile.basemetals.platinum_ore.name=铂矿石
-tile.basemetals.platinum_trapdoor.name=铂地板门
+tile.basemetals.platinum_trapdoor.name=铂活板门
 
 item.basemetals.adamantine_rod.name=艾德曼金属棒
 item.basemetals.aquarium_rod.name=海洋合金棒
